# pesquisa-rag-hibrido

./: .gitignore  CITATION.cff  LICENSE  README.md
experimentos/: .env.example  .gitignore  README.md  pyproject.toml
experimentos/data/outputs/_analysis/: stats.json  (+11 more)
experimentos/eval/: judges.py  metrics.py  report.py  runner.py
experimentos/eval/experiments/: verifier_signal.py
experimentos/scripts/: aggregate.py  analyze_mix_sizes.py  analyze_verifier_signal.py  generate_semantic_map.py  qualitative.py  stats.py
experimentos/src/: cli.py
experimentos/src/agent/: ablation.py  graph.py  state.py
experimentos/src/config/: providers.py  settings.py
experimentos/src/db/: chromadb.py  sqlite.py
experimentos/src/repositories/: chromadb_repository.py  semantic_map_repository.py  sqlite_repository.py
experimentos/src/services/: evidence_service.py  ingest_service.py  semantic_map_service.py
experimentos/src/utils/: tracking.py
experimentos/tests/: test_ablation.py  test_cli_ablation.py  test_consolidator.py  test_consolidator_lite.py  test_evidence_service.py  test_graph.py  test_judges.py  test_parse_llm_json.py  test_planner.py  test_providers.py  test_report.py  test_runner.py  test_simple_router.py  test_simple_synthesizer.py  test_sql_planner_executor.py  test_synthesizer.py  test_text_retriever.py  test_verifier.py  test_verifier_signal.py
poc/: 1_generate_mapa.py  1_setup_chromadb.py  3_run_evaluation.py  README.md  graph_architecture.py  pyproject.toml
poc/app/: main.py
poc/app/agent/: graph.py  state.py
poc/app/config/: settings.py
poc/app/db/: chromadb.py  sqlite.py
poc/app/repositories/: chromadb_repository.py  evaluation_repository.py  mapa_repository.py  sqlite_repository.py
poc/app/services/: evaluation_service.py  mapa_service.py
poc/app/utils/: agent_utils.py
(+154 files in other folders)
